--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/uber?createTableIfNotExists=true
+server.port=0987
+spring.jpa.database=MYSQL
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/uber
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
